package creational.singleton.vote_gk;

public enum Candidate {
    TRUMP,BIDEN
}
