@startuml
'https://plantuml.com/class-diagram
enum Candidate
class Election{
    - {static} Election instance;
    - int trump, biden;
    - List<String> users;
    - Election()
    + {static} Election getInstance()
    + void vote(Candidate candidate)
    + void showResults()
}
class User {
    - String name
    + void vote(Candidate candidate, String userNanme)
}

User ..> Election

MainVote *--> User

note left of User::vote
    1.Tạo 1 instance của Election
    2.Gọi phương thức vote trên instance để bầu chọn
end note
note left of Election
    Singleton
end note
@enduml